2012-01-26 Jari-Hermann Ernst  <jari-hermann.ernst@bad-gmbh.de> V0.2.0

	*pi4: changed ajax call to dataType json, general code refactoring
	*ajax: changed the complete output from table to ul/div
	*ajax: included the pajinate script for displaying long lists of 
		   documents, neccessary css changes
	*general: changed state to stable

2011-08-06 Jari-Hermann Ernst  <jari-hermann.ernst@bad-gmbh.de> V0.1.4

	*pi4: deleted the debugging output from yesterday

2011-08-05 Jari-Hermann Ernst  <jari-hermann.ernst@bad-gmbh.de> V0.1.3

	*pi4: debugging of reported bug for displaying link button in case 
		 that a txt file can be found in the fink folder

2011-08-05 Jari-Hermann Ernst  <jari-hermann.ernst@bad-gmbh.de> V0.1.2

	*p1:  finally deleted hack for Produktmappe GB

2011-08-05 Jari-Hermann Ernst  <jari-hermann.ernst@bad-gmbh.de> V0.1.1

	*p1:  reenabled hack for Produktmappe GB

2011-08-02 Jari-Hermann Ernst  <jari-hermann.ernst@bad-gmbh.de> V0.1.0

	* pi1/ajax: changed programming for new field from version 0.0.11
	* changed tca settings to have an own tab in record view in tx_dam

2011-07-28 Jari-Hermann Ernst  <jari-hermann.ernst@bad-gmbh.de> V0.0.11

	* main: added new field lowlevel_selection to tx_dam

2011-07-18 Jari-Hermann Ernst  <jari-hermann.ernst@bad-gmbh.de> V0.0.10

	*pi1:  removed exception for Produktmappe BGM from version 0.0.9

2011-07-18 Jari-Hermann Ernst  <jari-hermann.ernst@bad-gmbh.de> V0.0.9

	*pi1:  debugging of orderBy statement by order field (and not path)
		  included exceptions for Produktmappe BGM and GB

2011-07-08 Jari-Hermann Ernst  <jari-hermann.ernst@bad-gmbh.de> V0.0.8

	*pi1:  changed call for jquery api at google from http to https
	*pi4:  changed call for jquery api at google from http to https

2011-07-06 Jari-Hermann Ernst  <jari-hermann.ernst@bad-gmbh.de> V0.0.7

	*pi1:  debugging of orderBy statement by order field (and not path)

2010-06-16 Jari-Hermann Ernst  <jari-hermann.ernst@bad-gmbh.de> V0.0.6
